added bipap thread

--- a/VentUI.ui
+++ b/VentUI.ui
@@ -65,6 +65,12 @@
           </item>
           <item row="1" column="0">
            <widget class="QPushButton" name="startpush">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Start Push</string>
             </property>
