--- a/VentUI.ui
+++ b/VentUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1041</width>
-    <height>600</height>
+    <height>792</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,10 +44,10 @@
            </size>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="page_5">
-           <widget class="QWidget" name="">
+           <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
               <x>10</x>
@@ -400,6 +400,28 @@
             </property>
             <property name="text">
              <string>Init Bipap</string>
+            </property>
+           </widget>
+           <widget class="QPushButton" name="btnrunbploop">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>70</y>
+              <width>75</width>
+              <height>40</height>
+             </rect>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>40</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Run Loop</string>
             </property>
            </widget>
           </widget>
@@ -1286,8 +1308,8 @@
              <widget class="QLabel" name="labelipap">
               <property name="geometry">
                <rect>
-                <x>210</x>
-                <y>30</y>
+                <x>40</x>
+                <y>3</y>
                 <width>31</width>
                 <height>14</height>
                </rect>
@@ -1302,7 +1324,7 @@
              <widget class="QLCDNumber" name="ipaplcd">
               <property name="geometry">
                <rect>
-                <x>200</x>
+                <x>30</x>
                 <y>40</y>
                 <width>64</width>
                 <height>40</height>
@@ -1314,11 +1336,23 @@
                 <height>40</height>
                </size>
               </property>
+              <property name="styleSheet">
+               <string notr="true">color:blue</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="digitCount">
+               <number>3</number>
+              </property>
+              <property name="segmentStyle">
+               <enum>QLCDNumber::Flat</enum>
+              </property>
              </widget>
              <widget class="QDial" name="ipapdial">
               <property name="geometry">
                <rect>
-                <x>180</x>
+                <x>10</x>
                 <y>10</y>
                 <width>100</width>
                 <height>100</height>
@@ -1330,6 +1364,9 @@
                 <height>100</height>
                </size>
               </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(20,40,30)</string>
+              </property>
               <property name="minimum">
                <number>5</number>
               </property>
@@ -1337,6 +1374,9 @@
                <number>30</number>
               </property>
              </widget>
+             <zorder>ipapdial</zorder>
+             <zorder>labelipap</zorder>
+             <zorder>ipaplcd</zorder>
             </widget>
             <widget class="QWidget" name="page_4">
              <widget class="QWidget" name="formLayoutWidget">
